Adopted the header-only approach for data storage classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 20)
-add_library(numcpp numcpp/ndarray.cpp numcpp/narray.cpp numcpp/refcount.cpp)
+add_library(numcpp numcpp/narray.cpp numcpp/refcount.cpp)
 target_include_directories(numcpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(diagnostics benchmark/diagnostics.cpp)
 target_include_directories(diagnostics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
@@ -10,6 +10,7 @@ link_libraries(numcpp diagnostics)
 
 add_executable(array_iteration_1 benchmark/array_iteration/array_iteration_1.cpp)
 add_executable(register_storage_test benchmark/memory/memory_access.cpp)
+add_executable(matrix_test benchmark/matrix_test.cpp)
 add_executable(main benchmark/main.cpp)
 
 target_compile_options(register_storage_test PUBLIC "-Wno-register")
